sessions 2password.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <body>
- <form action = "login" method = "GET">
+ <form action = "/session" method = "POST">
    <input type="password" name = "password">
    <button>submit</button>
  </form>
