sessions with sqlite3, 3password.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE>
 <html>
 <body>
+  <form action= "/user" method= "POST">
+    <input type= "text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder= "password">
+    <input type="password" name="confirm" placholder="confirm password">
+    <button>submit!</button>
+  </form>
+  <h3>Returning User?</h3>
+  <h2>Log in: </h2>
  <form action = "/session" method = "POST">
+   <input type="text" name="username" placeholder="username">
    <input type="password" name = "password">
-   <button>submit</button>
+   <button>login</button>
  </form>
 </body>
 </html>
